# uniQL

./: .gitignore  CLAUDE.md  COMPETITIVE_STRATEGY.md  Cargo.toml  Dockerfile  LAYER_ARCHITECTURE_RESEARCH.md  LICENSE  README.md  ROADMAP.md  UNIQL_baseline.md  docker-compose.yml  uniql-engine.toml
.claude/: settings.json
.claude/agents/code-reviewer/: CODE_REVIEWER.md
.claude/agents/test-runner/: TEST_RUNNER.md
.claude/rules/: rust.md  safety.md  typescript.md
.claude/skills/coverage/: SKILL.md
.claude/skills/debug-transpiler/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml  pages.yml
benchmarks/: Cargo.toml  RESULTS.md
benchmarks/benches/: compiler.rs
benchmarks/src/: accuracy.rs  corpus.rs  e2e.rs  loadtest.rs
demo/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
demo/src/: App.tsx  index.css
demo/src/components/: DocsTab.tsx  Header.tsx  InvestigateTab.tsx  LiveTab.tsx  (+2 more)
playground/: index.html  package-lock.json  package.json  vite.config.js
playground/src/: examples.js  main.js  uniql-language.js
uniql-core/: Cargo.toml  README.md
uniql-core/src/: config.rs  lib.rs  main.rs
uniql-core/src/ast/: mod.rs
uniql-core/src/bind/: mod.rs
uniql-core/src/expand/: mod.rs
uniql-core/src/lexer/: mod.rs
uniql-core/src/normalize/: mod.rs
uniql-core/src/parser/: mod.rs
uniql-core/src/semantic/: mod.rs
uniql-core/src/transpiler/: logql.rs  logsql.rs  mod.rs  promql.rs
uniql-engine/: Cargo.toml
uniql-engine/src/: cache.rs  config.rs  engine.rs  main.rs  middleware_layers.rs  rate_limit.rs
uniql-engine/src/api/: explain.rs  health.rs  investigate.rs  metrics.rs  mod.rs  query.rs  schema.rs  validate.rs
uniql-engine/src/correlate/: mod.rs
uniql-engine/src/executor/: mod.rs  prometheus.rs  victorialogs.rs
uniql-engine/src/format/: mod.rs
uniql-engine/src/normalize_result/: mod.rs
uniql-engine/src/planner/: mod.rs
uniql-wasm/: Cargo.toml
uniql-wasm/src/: lib.rs
(+3 files in other folders)
