[package]
name = "uniql-core"
version = "0.2.0"
edition = "2021"
authors = ["Samet Yağcı <0xnerull@gmail.com>"]
description = "UNIQL — Unified Observability Query Language"
license = "MIT"
repository = "https://github.com/aetheris-ai/uniql"

[[bin]]
name = "uniql"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
