[package]
name = "uniql-engine"
version = "0.2.0"
edition = "2021"
description = "UNIQL Execution Engine — HTTP server for unified observability queries"

[[bin]]
name = "uniql-engine"
path = "src/main.rs"

[dependencies]
uniql-core = { path = "../uniql-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
